src/main/java/com/example/armaria/errors/ArmoryKeeperAlreadyExistsException.java
package com.example.armaria.errors;

public class ArmoryKeeperAlreadyExistsException extends RuntimeException {
  public ArmoryKeeperAlreadyExistsException(String registration) {
    super(registration);
  }
}